<resources>
    <!-- Titles -->
    <string name="app_name">MovieApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="reviews_title">Reviews</string>

    <!-- Menu Items Text -->
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>

    <!-- No Data Text -->
    <string name="no_trailers_text">No Trailers Available Yet</string>
    <string name="no_rate_text">NoT Rated Yet</string>

    <!-- Viewing Choice -->
    <string name="pref_title_choice">Sort by</string>
    <string name="pref_default_choice">now_playing</string>
    <string name="prefs_choices_list_key">prefs_choices_list_key</string>
    <string-array name="pref_choices_list_titles">
        <item>Now Playing</item>
        <item>Popular</item>
        <item>Top Rated</item>
        <item>Upcoming</item>
        <item>Favourite</item>
    </string-array>
    <string-array name="pref_choices_list_values">
        <item>now_playing</item>
        <item>popular</item>
        <item>top_rated</item>
        <item>upcoming</item>
        <item>favourite</item>
    </string-array>

    <!-- Poster Quality -->
    <string name="pref_title_poster_quality">Poster Quality</string>
    <string name="pref_default_poster_quality">185</string>
    <string name="prefs_poster_quality_list_key">prefs_poster_quality_list_key</string>
    <string-array name="pref_poster_quality_list_titles">
        <item>SD</item>
        <item>HD</item>
    </string-array>
    <string-array name="pref_poster_quality_list_values">
        <item>185</item>
        <item>300</item>
    </string-array>

    <!-- Clear Favourite -->
    <string name="prefs_title_clear_favourite">Clear Favourite</string>
    <string name="prefs_clear_favourite_key">prefs_clear_favourite_key</string>
</resources>
