<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_default_choice"
        android:entries="@array/pref_choices_list_titles"
        android:entryValues="@array/pref_choices_list_values"
        android:key="@string/prefs_choices_list_key"
        android:title="@string/pref_title_choice" />

    <ListPreference
        android:defaultValue="@string/pref_default_poster_quality"
        android:entries="@array/pref_poster_quality_list_titles"
        android:entryValues="@array/pref_poster_quality_list_values"
        android:key="@string/prefs_poster_quality_list_key"
        android:title="@string/pref_title_poster_quality" />

    <Preference
        android:key="@string/prefs_clear_favourite_key"
        android:title="@string/prefs_title_clear_favourite" />

</PreferenceScreen>
